docs/build/isc/v1.0.0-rc.6/docs/how-tos/core-contracts/token/mint-token.md
---
description: How to mint native token on an L1 foundry.
image: /img/logo/WASP_logo_dark.png
tags:
  - foundry
  - EVM
  - how-to
  - native tokens
  - mint
---
import ExampleCodeIntro from '../../../_partials/how-tos/token/_example_code_intro.md';
import ObsoleteTokenCreation from '../../../_partials/how-tos/token/_obsolete_token_creation.md';

# Mint a Native Token using a Foundry

<ObsoleteTokenCreation/>


To mint tokens from a [foundry](/tips/tips/TIP-0018/#foundry-output), you first need to be aware that only the foundry owner can mint token,
so you should execute the `ISC.accounts.mintNativeTokens` function in the same contract that [created the foundry](./create-foundry.md).

## Example Code

<ExampleCodeIntro/>

### 2. Mint the Native Token

Mint the native token specifying the foundry serial number, the amount to mint and the allowance.
 
```solidity
ISC.accounts.mintNativeTokens(_foundrySN, _amount, allowance);
```

## Full Example Code

```solidity
event MintedNativeTokens(uint32 foundrySN, uint amount);

function mintNativeTokens(uint32 _foundrySN, uint _amount, uint64 _storageDeposit) public payable {
    require(msg.value == _storageDeposit*(10**12), "Please send exact funds to pay for storage deposit");
    ISCAssets memory allowance;
    allowance.baseTokens = _storageDeposit;
    ISC.accounts.mintNativeTokens(_foundrySN, _amount, allowance);
    emit MintedNativeTokens(_foundrySN, _amount);
}
```
